--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ html{
 }
 
 .background-section-one{
-  background-image: url(../assets/Black-Square-Wallpaper-\,-62+-Pictures.jpg);
+  background-image: url(../assets/bg.png);
   height: 80vh;
   background-attachment: fixed;
   background-size: cover;
@@ -49,10 +49,16 @@ html{
 
 .paragrafo{
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  font-size: 1.8em;
+  font-size: 1.6em;
   margin-top: 50px;
   margin-bottom: 100px;
 }
+
+.loader{
+  width: 5vh;
+  height: 5vh;
+}
+
 input{
   width: 100%;
   height: 30px;
