--- a/css/style.css
+++ b/css/style.css
@@ -41,15 +41,15 @@ html{
 
 .produtos{
   padding-top: 50px;
-  width: 250px;
-  height: 250px;
+  width: 150px;
+  height: 150px;
   margin-left: 150px;
   align-items: center;
 }
 
 .paragrafo{
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-  font-size: 1.6em;
+  font-size: 1.5em;
   margin-top: 50px;
   margin-bottom: 100px;
 }
@@ -109,6 +109,7 @@ input#button {
 
 
 form{
+  margin-bottom: 50px;
   display:table-row;
   height: 6.25rem;
   
